# bbc-news-class-mlops

./: .env.example  .env.exmaple  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.local.traefik.yml  docker-compose.local.yml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.txt
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  main.yml  retrain.yml
configs/: deepchecks.yaml  evidently.yaml  huggingface.yaml  mlflow.yaml  mlflow_config.yaml  prefect.toml  prefect_config.yaml  prometheus.yml
configs/feast/: feature_store.yaml
configs/grafana/: dashboard.json
docs/: README_SUMMARY.md
k8s/: all-in-one.yaml
models/: model_evaluation_report.md
scripts/: setup_env.bat  setup_env.sh
src/api/: main.py
src/api/templates/: index.html
src/features/: feature_repo.py
src/models/: evaluate.py  train.py
src/pipelines/: mlflow_example.py  pipeline.py
src/pipelines/prefect_flows/: example_flow.py
src/serving/: api.py  app.py  schemas.py
tests/: test_model.py
tests/model_validation/: train_test_checks.py
workflows/.github/workflows/: ci_cd.yaml
