[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "news-classifier"
version = "0.1.0"
description = "News classification MLOps project using BBC articles dataset"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "YourName", email = "your.email@example.com"},
]
dependencies = [
    "scikit-learn>=1.5.1",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "mlflow>=2.17.0",
    "prefect>=3.0.0",
    "deepchecks>=0.18.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pytest>=7.4.0",
    "black>=24.4.0",
    "kaggle>=1.6.12",
    "joblib>=1.4.0",
    "python-dotenv>=1.0.1"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/news-classifier"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest]
testpaths = ["tests"]
